--- a/bootstrap-project/style.css
+++ b/bootstrap-project/style.css
@@ -1,5 +1,7 @@
 :root {
   --text-color: #0f1026;
+  --section-title: #333333;
+  --subtitle-color: #444444;
   --background-color: #f2f2f2;
   --primary-color: #4976f2;
 }
@@ -33,23 +35,25 @@ body {
 
 .main-title {
   text-align: center;
-  font-size: 30px;
+  font-size: 40px;
+  color: var(--section-title);
 }
 
 .main-title::after {
   content: '';
   display: block;
-  width: 130px;
+  width: 15%;
   height: 1.5px;
   background-color: var(--text-color);
   margin: 10px auto;
 }
 
 #about-title {
+  font-size: 20px;
   text-transform: uppercase;
   font-weight: bold;
+  color: var(--section-title);
 }
-
 
 #about-list {
   padding: 0;
@@ -59,8 +63,10 @@ li {
   line-height: 30px;
 }
 
+
 #about-list i {
-  color: var(--primary-color)
+  color: var(--primary-color);
+  margin-right: 15px;
 }
 
 /* Serviços */
