--- a/bootstrap-project/css/style.css
+++ b/bootstrap-project/css/style.css
@@ -43,7 +43,8 @@ li {
 
 header,
 .navbar {
-    background-color: var(--navbar-color)
+    background-color: var(--navbar-color);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 }
 
 #nav-container {
@@ -157,6 +158,7 @@ header,
 
 #about-area {
     background-color: #f9f9f9;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 }
 
 .main-title {
@@ -212,7 +214,7 @@ header,
 .service-box i {
     font-size: 36px;
     margin-bottom: 20px;
-    color: var(--services-icons);
+    color: var(--accent-color);
 }
 
 .service-box h4 {
@@ -268,7 +270,6 @@ header,
 #company-img {
     background-image: url('../img/empresa.jpg');
     background-size: cover;
-    height: 100%;
 }
 
 #pattern-img h4,
@@ -308,12 +309,25 @@ header,
     margin-bottom: 30px;
 }
 
-#filter-btn-box {
+.portifolio-btn {
+    background-color: #fff;
+    color: var(--text-color);
+    text-transform: uppercase;
+    width: 200px;
+    height: 60px;
+    padding: 10px 20px;
+    border-radius: 30px;
+    border: 2px solid #444;
+    transition: .5s;
+    text-decoration: none;
+}
+
+#portifolio-btn-box {
     margin-bottom: 50px;
     text-align: center;
 }
 
-#portfolio-area #filter-btn-box .filter-btn {
+#portfolio-area #portifolio-btn-box .portifolio-btn {
     color: var(--text-color);
     border: 1px solid var(--text-color);
     background-color: transparent;
@@ -326,8 +340,8 @@ header,
     padding: 0 20px;
 }
 
-#portfolio-area #filter-btn-box .filter-btn.active,
-#portfolio-area #filter-btn-box .filter-btn:hover {
+#portfolio-area #portifolio-btn-box .portifolio-btn.active,
+#portfolio-area #portifolio-btn-box .portifolio-btn:hover {
     color: #fff;
     background-color: var(--primary-color);
     border-color: var(--primary-color);
@@ -524,11 +538,10 @@ header,
     }
 
     /* About */
-    #about-area img {
-        margin-top: 100px;
-    }
+
 
     /* Data */
+
     .circle-box div {
         padding: 0 10px;
     }
@@ -547,8 +560,11 @@ header,
     }
 
     /* Apply */
+
+
     #apply-area .apply-box {
-        padding: 50px 25px;
+        width: 100%;
+        height: 100%;
     }
 
     /* News */
@@ -631,8 +647,8 @@ header,
         display: none;
     }
 
-    /* Filter */
-    #portfolio-area #filter-btn-box .filter-btn {
+    /* Portifolio */
+    #portfolio-area #portifolio-btn-box .portifolio-btn {
         margin-bottom: 20px;
     }
 
