--- a/bootstrap-project/css/style.css
+++ b/bootstrap-project/css/style.css
@@ -45,6 +45,10 @@
 
 /* Gerais */
 
+.hidden {
+    display: none;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     background-color: var(--background-color);
